Added users page
